# Parallel-Computing

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_zh.md  build.bash  run.bash  run_client.bash  run_local.bash  run_server.bash
docs/: CHANGELOG.md
include/: access.cuh  calculation.h  client.h  common.h  cuda.cuh  net.hpp  original.h  server.h  speedup.h
report/: time_statistics.xlsx
src/: access.cu  client.cpp  common.cpp  cuda.cu  main.cpp  net.cpp  original.cpp  server.cpp  speedup.cpp
test/: test.cpp
